--- a/Templates/index.html
+++ b/Templates/index.html
@@ -66,7 +66,7 @@
             </h1>
             <p class="header-subtitle" data-aos="flip-right", data-aos-delay="400", data-aos-duration="1000   ">Python - FullStack Engineer</p>
 
-            <button class="btn btn-primary" data-aos="flip-right", data-aos-delay="400", data-aos-duration="1000">Visit My Works</button>
+            <button class="btn btn-primary" data-aos="flip-right", data-aos-delay="400", data-aos-duration="1000"><a href="#portfolio" style="color:white">Visit My Works</a></button>
         </div>
     </header><!-- end of page header -->
 
