updated the Alt of some few tags

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -78,7 +78,7 @@
             <div class="about">
                 <div class="about-img-holder" data-aos="fade-right", data-aos-delay="4000", data-aos-duration="1000   ">
                     <img src="{% static 'assets/imgs/avatar.png'%}" class="about-img"
-                        alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        alt="Julius Boakye">
                 </div>
                 <div class="about-caption">
                     <p class="section-subtitle">Who Am I ?</p>
@@ -110,7 +110,7 @@
                     <div class="service-card">
                         <div class="body"  >
                             <img src="{% static 'assets/imgs/pencil-case.svg'%}"
-                                alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
+                                alt="Julius Boakye"
                                 class="icon">
                             <h6 class="title">Graphic Designing</h6>
                             <p class="subtitle">I design a very good flyer and anything that has to do with Designing(Logos,flyer, UI etc).</p>
@@ -121,7 +121,7 @@
                     <div class="service-card">
                         <div class="body">
                             <img src="{% static 'assets/imgs/responsive.svg'%}"
-                                alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
+                                alt="Julius Boakye"
                                 class="icon">
                             <h6 class="title">Web & App Dev</h6>
                             <p class="subtitle">Good at Creating a full stacked web or app application, with a stunning UI and user interactions.</p>
@@ -132,7 +132,7 @@
                     <div class="service-card">
                         <div class="body">
                             <img src="{% static 'assets/imgs/toolbox.svg'%}"
-                                alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
+                                alt="Julius Boakye"
                                 class="icon">
                             <h6 class="title">Maintenance</h6>
                             <p class="subtitle">I maintain all your applications including the one not built by me, I also review codes and make corrections.</p>
@@ -143,7 +143,7 @@
                     <div class="service-card">
                         <div class="body">
                             <img src="{% static 'assets/imgs/analytics.svg'%}"
-                                alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
+                                alt="Julius Boakye"
                                 class="icon">
                             <h6 class="title">Cloud Computing</h6>
                             <p class="subtitle">AWS, Microsoft Azure, Google Cloud platforms, Salesforce, Dropbox </p>
@@ -164,7 +164,7 @@
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
                         <img src="{% static 'assets/imgs/savile.png'%}" class="portfolio-card-img"
-                            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                            alt="SavileRow Gh">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>SavileRow Gh</h5>
@@ -176,7 +176,7 @@
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
                         <img class="portfolio-card-img" src="{% static 'assets/imgs/books.png'%}" class="img-responsive rounded"
-                            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                            alt="Julius Books website">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>Julius Books</h5>
@@ -188,7 +188,7 @@
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
                         <img class="portfolio-card-img" src="{% static 'assets/imgs/aurasi.png'%}" class="img-responsive rounded"
-                            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                            alt="Aurasi Sim Website ">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>Aurasi</h5>
@@ -211,7 +211,7 @@
                 <div class="pricing-card">
                     <div class="pricing-card-header">
                         <img class="pricing-card-icon" src="{% static 'assets/imgs/scooter.svg'%}"
-                            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                            alt="TsuMi Website">
                     </div>
                     <div class="pricing-card-body">
                         <h6 class="pricing-card-title">TsuMi</h6>
@@ -234,7 +234,7 @@
                 <div class="pricing-card">
                     <div class="pricing-card-header">
                         <img class="pricing-card-icon" src="{% static 'assets/imgs/shipped.svg'%}"
-                            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                            alt="Merch Perch Shops">
                     </div>
                     <div class="pricing-card-body">
                         <h6 class="pricing-card-title" style="color:rgb(33, 24, 40)">Merch Perch <br> Shop</h6>
@@ -256,7 +256,7 @@
                 <div class="pricing-card">
                     <div class="pricing-card-header">
                         <img class="pricing-card-icon" src="{% static 'assets/imgs/startup.svg'%}"
-                            alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                            alt="Merch Perch Shipping">
                     </div>
                     <div class="pricing-card-body">
                         <h6 class="pricing-card-title">Merch Perch Shipping</h6>
@@ -309,7 +309,7 @@
                     <div class="testimonial-card">
                         <div class="testimonial-card-img-holder">
                             <img src="{% static 'assets/imgs/daniel.jpg'%}" class="testimonial-card-img"
-                                alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                                alt="Julius Boakye">
                         </div>
                         <div class="testimonial-card-body">
                             <p class="testimonial-card-subtitle">JuliusTech is the real deal when it comes to full stack development. I had an idea for a web application, and they turned it into a reality with speed and precision. Their attention to detail and willingness to collaborate made the process smooth and stress-free.</p>
@@ -321,7 +321,7 @@
                     <div class="testimonial-card">
                         <div class="testimonial-card-img-holder">
                             <img src="{% static 'assets/imgs/user.png'%}" class="testimonial-card-img"
-                                alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                                alt="Julius Boakye">
                         </div>
                         <div class="testimonial-card-body">
                             <p class="testimonial-card-subtitle">I needed a professional-looking flyer for my business, and JuliusTech delivered beyond my expectations. Their design skills and creativity are top-notch, and they made sure that the final product was exactly what I wanted. I highly recommend JuliusTech for all your graphic design needs.</p>
@@ -373,7 +373,7 @@
             <!-- <div class="blog-card">
                 <div class="blog-card-header">
                     <img src="{% static 'assets/imgs/img-2.jpg'%}" class="blog-card-img"
-                        alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        alt="Julius Boakye">
                 </div>
                 <div class="blog-card-body">
                     <h5 class="blog-card-title">Explicabo illo</h6>
